--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
+    "scroll-carousel": "^1.2.7",
+    "scroll-carousel-react": "^1.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
