--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-router-hash-link": "^2.4.3",
     "redux": "^5.0.1",
     "scroll-carousel": "^1.2.7",
     "scroll-carousel-react": "^1.0.0",
